<resources>
    <string name="app_name">Judopay Pizza</string>
    <string name="judo_pizza">Judopay Pizza</string>
    <string name="review_your_order">Review your order</string>
    <string name="order_summary">Order summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="card_fee">Card fee</string>
    <string name="total">Total</string>
    <string name="pay_now">Pay now</string>
    <string name="thanks_for_your_order_a_delivery_to_your_address_will_be_made_in">Thanks for your order! A delivery to your address will be made in:</string>
    <string name="minutes">minutes</string>
    <string name="done">Done</string>
    <string name="pounds_format">£%s</string>

    <string name="public_key">BB1mttaH3YZAyiwF2kJj2SF6AnuQV6duIwAzfzeFamNLXt63SnYeeB78YN0UkaL9i7zg98jy0xaPTp+WwTQn3O4=</string>
    <string name="android_pay_unavailable">Android Pay is unavailable</string>
    <string name="error_code">Error code: %d</string>

</resources>
