<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:text="Order #1234567"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/thanks_for_your_order_a_delivery_to_your_address_will_be_made_in" />

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30" />

    <TextView
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes" />

    <Button
        android:id="@+id/done_button"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>